src/tests/testfiles/binary-operators/types-10.txt
Error at 2:7: Comparison operator operands need to be of same type (have int rvalue and char[] rvalue)
4 > "a";
  ^
